--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,15 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/appCtrl.js"></script>
+    <script src="js/battlesCtrl.js"></script>
+    <script src="js/scenariosCtrl.js"></script>
+    <script src="js/scenarioCtrl.js"></script>
+    <script src="js/scenarioTurnCtrl.js"></script>
+    <script src="js/dataSvc.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="cwb">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
