navigation isn't so good, but it's there; scenario turn tab

--- a/www/index.html
+++ b/www/index.html
@@ -18,11 +18,11 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="lib/moment/moment.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/appCtrl.js"></script>
-    <script src="js/battlesCtrl.js"></script>
-    <script src="js/scenariosCtrl.js"></script>
+    <script src="js/mainCtrl.js"></script>
     <script src="js/scenarioCtrl.js"></script>
     <script src="js/scenarioTurnCtrl.js"></script>
     <script src="js/scenarioOrdersCtrl.js"></script>
