--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -18,6 +19,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="lib/moment/moment.js"></script>
 
     <!-- your app's js -->
