--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -22,6 +22,7 @@
 
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="lib/moment/moment.js"></script>
+    <script src="lib/lodash/lodash.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
