order delay reduction

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/dice.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -30,6 +31,7 @@
     <script src="js/controllers/scenarioCtrl.js"></script>
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
+    <script src="js/services/dice.js"></script>
     <script src="js/services/phases.js"></script>
     <script src="js/services/battles.js"></script>
     <script src="js/services/current.js"></script>
