--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers/scenarioCtrl.js"></script>
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
+    <script src="js/directives/min-max.js"></script>
     <script src="js/services/dice.js"></script>
     <script src="js/services/phases.js"></script>
     <script src="js/services/battles.js"></script>
