--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,8 @@
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
     <script src="js/directives/min-max.js"></script>
+    <script src="js/services/media.js"></script>
+    <script src="js/services/sound.js"></script>
     <script src="js/services/dice.js"></script>
     <script src="js/services/phases.js"></script>
     <script src="js/services/battles.js"></script>
