--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/dice.css" rel="stylesheet">
 
@@ -31,7 +32,7 @@
     <script src="js/controllers/scenarioCtrl.js"></script>
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
-    <script src="js/directives/min-max.js"></script>
+    <script src="js/controllers/scenarioRosterCtrl.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
     <script src="js/services/dice.js"></script>
