--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
     <script src="js/controllers/scenarioRosterCtrl.js"></script>
+    <script src="js/directives/roster.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
     <script src="js/services/dice.js"></script>
