--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/controllers/scenarioTurnCtrl.js"></script>
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
     <script src="js/controllers/scenarioRosterCtrl.js"></script>
+    <script src="js/controllers/scenarioFireCtrl.js"></script>
     <script src="js/directives/roster.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
@@ -42,6 +43,9 @@
     <script src="js/services/current.js"></script>
     <script src="js/services/roster.js"></script>
     <script src="js/services/orders.js"></script>
+    <script src="js/services/fire.js"></script>
+    <script src="js/services/stragglers.js"></script>
+    <script src="js/services/morale.js"></script>
   </head>
 
   <body ng-app="cwb">
