close combat view

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/scenarioOrdersCtrl.js"></script>
     <script src="js/controllers/scenarioRosterCtrl.js"></script>
     <script src="js/controllers/scenarioFireCtrl.js"></script>
+    <script src="js/controllers/scenarioMeleeCtrl.js"></script>
     <script src="js/directives/roster.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
@@ -46,6 +47,7 @@
     <script src="js/services/fire.js"></script>
     <script src="js/services/stragglers.js"></script>
     <script src="js/services/morale.js"></script>
+    <script src="js/services/melee.js"></script>
   </head>
 
   <body ng-app="cwb">
