--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/controllers/scenarioRosterCtrl.js"></script>
     <script src="js/controllers/scenarioFireCtrl.js"></script>
     <script src="js/controllers/scenarioMeleeCtrl.js"></script>
+    <script src="js/controllers/scenarioMoraleCtrl.js"></script>
     <script src="js/directives/roster.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
